--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@aldocedok/vensor",
-  "version": "1.1.2",
+  "name": "vensor",
+  "version": "1.1.3",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
